Fix template component language-selector overflow

--- a/src/styles/components/language-selector.scss
+++ b/src/styles/components/language-selector.scss
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 
   @media (min-width: 720px) {
     padding: 0.4rem;
